--- a/ELKmonitor/install
+++ b/ELKmonitor/install
@@ -4,6 +4,7 @@
 #host tweak 
 sysctl vm.max_map_count
 sysctl -w vm.max_map_count=262144
+sudo  sysctl -w fs.file-max=65536
 
 #install dockernized elk
 docker pull sebp/elk
