--- a/ELKmonitor/install
+++ b/ELKmonitor/install
@@ -4,7 +4,8 @@
 #host tweak 
 sysctl vm.max_map_count
 sysctl -w vm.max_map_count=262144
-sudo  sysctl -w fs.file-max=65536
+sysctl -w fs.file-max=65536
+** you should run docker in privilege mode **
 
 #install dockernized elk
 docker pull sebp/elk
