--- a/rancheros/install
+++ b/rancheros/install
@@ -1,1 +1,6 @@
 https://linuxhint.com/install_rancher_os/
+
+If you’re using Linux, then you can use the dd command to make a bootable USB of Rancher OS as follows:
+$ sudo dd if=~/Downloads/rancheros.iso of=/dev/sdX bs=1M
+
+NOTE: Here, sdX is the USB thumb drive. You can find out what it is with the lsblk command.
